corrigido path do endpoint documentacao
